swagger 수정+에러 수정
